# homebrew-auto-seedbox

./: .envrc  .gitignore  README.md  pyproject.toml
Formula/: auto-seedbox.rb
auto_download/: torrent_daemon.sh  uploadtorrents.plist  wait_and_download.sh
auto_kindle/: copy_to_kindle.sh
auto_seedbox/: torrent_daemon.py
scripts/: copy_to_kindle.sh  get_download_target.py  get_torrent_epub_files.py  hot_reload.py  set_vars.sh  torrent_daemon.sh  torrent_name.py  wait_and_download.sh
