[tool.poetry]
name = "auto-seedbox"
version = "2.0.0"
description = ""
authors = ["Riley Martine <riley.martine@protonmail.com>"]
repository = "https://github.com/riley-martine/homebrew-auto-seedbox"
readme = "README.md"

[tool.poetry.scripts]
auto-seedbox = "auto_seedbox.torrent_daemon:main"

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^5.0.3"
macfsevents = "^0.8.4"
dataclasses-json = "^0.6.3"
qbittorrent-api = "^2024.9.67"
libtorrent = "^2.0.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.1.9"
types-paramiko = "^3.5.0.20240928"

[tool.ruff]
ignore = [
  # Ignore false-positive subprocess check (https://github.com/astral-sh/ruff/issues/4045)
  "S603",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
